cabal-version:       2.4

name:                rbtTestHarness
version:             0.1.0.0
author:              Mete Polat
maintainer:          mete.polat@cs.tum.edu

library
  exposed-modules:     RBT.Kernel RBT.Verified
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0
  -- hs-source-dirs:
  default-language:    Haskell2010

executable rbtTestHarness
  main-is:             Main.hs
  other-modules:       RBT.Kernel RBT.Verified
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0, random, optparse-applicative, rbtTestHarness
  -- hs-source-dirs:
  default-language:    Haskell2010
