cabal-version:       2.4

name:                rbtTestHarness
version:             0.1.0.0
author:              Mete Polat
maintainer:          mete.polat@cs.tum.edu

executable rbtTestHarness
  main-is:             Main.hs
  other-modules:       RBT.Kernel RBT.Verified
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0, random, random-shuffle, optparse-applicative
  -- hs-source-dirs:
  default-language:    Haskell2010
